# bornvita

./: README.md  README_fixed.md  pyproject.toml  setup.py
bornvita/: __init__.py  brainrot.py
bornvita.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
